--- a/www/partials/navigation-bar.html
+++ b/www/partials/navigation-bar.html
@@ -1,4 +1,17 @@
-<a href="#/top">Top</a>&nbsp;&gt;&nbsp;
-<a href="#/list">List</a>&nbsp;&gt;&nbsp;
-<a href="#/dianpingtest">DianPing</a>&nbsp;&gt;&nbsp;
-<button ng-click="back()">back</button><br/>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<ul class="breadcrumb">
+				<li>
+					<a href="#/top">主页</a> <span class="divider"></span>
+				</li>
+				<li>
+					<a href="#/list">类目</a> <span class="divider"></span>
+				</li>
+				<li class="active">
+					<a href="#/dianpingtest">商户</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
