--- a/www/css/app.css
+++ b/www/css/app.css
@@ -3,7 +3,7 @@ body{
 	font-family:SimSun;
 	font-size:14px;
 	width:100%;
-	background:#eaf7de;
+	background:#f5f5f5;
 }
 html,body{
 	height:100%;
@@ -17,27 +17,7 @@ html,body{
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 }
-.header{
-	height:100%;
-	min-height:100%;
-	height:auto !important;
-	}
-.footer{
-	background-color:#333;
-	color:white;
-	height:80px;
-}
-.container .credit{
-	margin:10px 0;
-}
-#login .title label{
-	font-size:2em;
-	font-weight:bold;
-}
-#register .title label{
-	font-size:2em;
-	font-weight:bold;
-}
+
 .wrapper{
 	-webkit-box-flex: 1;
 	display: block;
@@ -69,7 +49,7 @@ html,body{
 	text-size-adjust: none;
 }
 .list{
-	/*height: 200px;*/
+
 }
 .ez-icon{
 	left: 15px;
@@ -78,4 +58,9 @@ html,body{
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position: center center;
+}
+
+#editor {
+	overflow:scroll;
+	max-height:300px
 }
