--- a/www/partials/list.html
+++ b/www/partials/list.html
@@ -5,11 +5,13 @@ Sort by:
   <option value="age">Newest</option>
 </select>
 <p>current phone is {{thePhone.age}}</p>
-<scroller>
+<div>
+	<scroller>
 	<li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
 	  <div ng-click="setPhone(phone)">set</div>
 	  <a href="#/detail/{{phone.id}}">{{phone.id}}</a>
 	  {{phone.name}}
 	  <p>{{phone.snippet}}</p>
 	</li>
-</scroller>
+	</scroller>
+</div>
