--- a/www/css/app.css
+++ b/www/css/app.css
@@ -40,7 +40,7 @@ html,body{
 	width: auto;
 	height: auto;
 	overflow: hidden;
-	position: absolute;
+	position: relative;
 	z-index: 1;
 }
 .scroller{
