--- a/www/partials/list.html
+++ b/www/partials/list.html
@@ -1,3 +1,4 @@
+<a href="#/top">back</a>
 <p>Search: <input ng-model="query"><p>
 Sort by:
 <select ng-model="orderProp">
@@ -5,8 +6,8 @@ Sort by:
   <option value="age">Newest</option>
 </select>
 <p>current phone is {{thePhone.age}}</p>
-<div scrollable class="list">
-<li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
+<div scrollable class="list" show-scrollbar="true">
+<li ng-repeat="phone in phones | filter:query | orderBy:orderProp" hm-tap="onTap($event)">
   <div ng-click="setPhone(phone)">set</div>
   <a href="#/detail/{{phone.id}}">{{phone.id}}</a>
   {{phone.name}}
