--- a/www/partials/top.html
+++ b/www/partials/top.html
@@ -1,2 +1,3 @@
 <a href="#/list">to list</a><br/>
-<button ng-click="onTap($event)">click me</button>
+<div d></div>
+<div hm-tap="onE('tap', $event)">click mehfds fhds jfhskf hfjhsd khsdkfh hfsdkjfh ksfhksdjhf khsd fkhsdf kshdf sdhkfhhdsj </div>
