--- a/www/partials/dianpingtest.html
+++ b/www/partials/dianpingtest.html
@@ -1,9 +1,10 @@
 <navigation/>
+<regions></regions>
 <div scrollable class="list" show-scrollbar="true" style="height: 500px;">
 	<li ng-repeat="food in foodlist">
 		<div ng-if="food.icon" class="ez-icon" style="background-image:url('{{food.icon}}')"></div>
 		<p>{{formatName(food.data.name)}}</p>
-		<p>{{food.data.address}}</p>
+		<p>{{region.name}}/{{food.data.address}}</p>
 		<a ng-href="{{food.data.coupon_url}}">{{food.data.coupon_url}}</a>
 		<p>{{food.data.telephone}}</p>
 		<hr/>
