--- a/www/css/app.css
+++ b/www/css/app.css
@@ -9,9 +9,10 @@ html,body{
 	height:100%;
 }
 .wrap{
-	min-height:100%;
-	height:auto !important;
-	margin:0 auto -80px;
+	/*min-height:100%;*/
+	height: 100%;
+	/*height:auto !important;*/
+	/*margin:0 auto -80px;*/
 	max-width:640px;
 }
 .header{
