--- a/www/partials/dianpingtest.html
+++ b/www/partials/dianpingtest.html
@@ -1,5 +1,6 @@
 <navigation/>
-<regions></regions>
+<regions/>
+<categories/>
 <div scrollable class="list" show-scrollbar="true">
 	<li ng-repeat="food in foodlist">
 		<div ng-if="food.icon" class="ez-icon" style="background-image:url('{{food.icon}}')"></div>
