--- a/www/partials/dianpingtest.html
+++ b/www/partials/dianpingtest.html
@@ -2,12 +2,12 @@
 <regions/>
 <categories/>
 <div scrollable class="list" show-scrollbar="true">
-	<li ng-repeat="food in foodlist">
-		<div ng-if="food.icon" class="ez-icon" style="background-image:url('{{food.icon}}')"></div>
-		<p>{{formatName(food.data.name)}}</p>
-		<p>{{region.name}}/{{food.data.address}}</p>
-		<a ng-href="{{food.data.coupon_url}}">{{food.data.coupon_url}}</a>
-		<p>{{food.data.telephone}}</p>
+	<li ng-repeat="item in itemlist">
+		<div ng-if="item.icon" class="ez-icon" style="background-image:url('{{item.icon}}')" ng-click="goDetail(item)"></div>
+		<a ng-href="#/detail/{{item.business_id}}">{{formatName(item.name)}}</a>
+		<p>{{item.address}}</p>
+		<a ng-href="{{item.icon}}">{{item.icon}}</a>
+		<p>{{item.tel}}</p>
 		<hr/>
 	</li>
 </div>
