--- a/www/partials/directives/carousel.html
+++ b/www/partials/directives/carousel.html
@@ -7,10 +7,10 @@
 					</li>
 				</ol>
 				<div class="carousel-inner">
-					<div ng-repeat="slide in slides" replace="true" class="item{{slide.class}}">
+					<div ng-repeat="slide in slides" class="item{{slide.class}}">
 						<img alt="" ng-src="{{slide.image}}" />
 						<div class="carousel-caption">
-							<h4>{{slide.text}}</h4>
+							<h4>{{slide.title}}</h4>
 							<p>{{slide.text}}</p>
 						</div>
 					</div>
