--- a/www/partials/directives/navigation-bar.html
+++ b/www/partials/directives/navigation-bar.html
@@ -1,15 +1,18 @@
-<div class="container-fluid">
+<div class="container-fluid" headroom>
 	<div class="row-fluid">
 		<div class="span12">
 			<ul class="breadcrumb">
-				<li>
+				<li class="active">
 					<a href="#/top">主页</a> <span class="divider"></span>
 				</li>
 				<li>
 					<a href="#/list">类目</a> <span class="divider"></span>
 				</li>
-				<li class="active">
+				<li>
 					<a href="#/dianpingtest">商户</a>
+				</li>
+				<li>
+					<a href="#/m/top">MTop</a>
 				</li>
 			</ul>
 		</div>
