--- a/www/css/app.css
+++ b/www/css/app.css
@@ -66,14 +66,14 @@ html,body{
 	z-index: 1;
 }
 .headroom--top{
-	/*position: fixed;*/
-	z-index: 10;
+	position: fixed;
+	z-index: 9999;
 	right: 0;
 	left: 0;
 	top: 0;
 }
 .headroom--not-top{
-	/*position: fixed;*/
+	position: fixed;
 	right: 0;
 	left: 0;
 	top: 0;
