--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,80 +1,122 @@
 html,body{
-	color:#a2add7;
-	font-family:SimSun;
-	font-size:14px;
-	width:100%;
-	height:100%;
-	background:#f5f5f5;
+  color:#a2add7;
+  font-family:SimSun;
+  font-size:14px;
+  width:100%;
+  height:100%;
+  background:#f5f5f5;
+}
+
+/*main-view, ng-view, [ng-view], [ng-transclude] {
+  display: block;
+  width: 100%;
+  height: 100%;
+}*/
+
+title-bar{
+  display: block;
+  height: 45px;
+  width: 100%;
+}
+
+title-bar .back, title-bar .text-title, title-bar .more{
+  display: block;
+  padding: 10px;
+  text-align: center;
+}
+
+title-bar .back{
+  width: 20%;
+  float: left;
+}
+
+title-bar .text-title{
+  width: 60%;
+  float: left;
+}
+
+title-bar .more{
+  float: right;
+  width: 20%;
 }
 
 .wrap{
-	/*min-height:100%;*/
-	height: 100%;
-	/*height:auto !important;*/
-	/*margin:0 auto -80px;
-	max-width:640px;*/
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
+  /*min-height:100%;*/
+  height: 100%;
+  /*height:auto !important;*/
+  /*margin:0 auto -80px;
+  max-width:640px;*/
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 
-.wrapper{
-	-webkit-box-flex: 1;
-	display: block;
-	width: auto;
-	height: auto;
-	overflow: hidden;
-	position: relative;
-	z-index: 1;
+.scroll-wrapper{
 }
+
 .scroller{
-	position: absolute;
-	z-index: 1;
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	width: 100%;
-	-webkit-transform: translateZ(0);
-	-moz-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	-o-transform: translateZ(0);
-	transform: translateZ(0);
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-text-size-adjust: none;
-	-moz-text-size-adjust: none;
-	-ms-text-size-adjust: none;
-	-o-text-size-adjust: none;
-	text-size-adjust: none;
+  position: absolute;
+  z-index: 1;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  width: 100%;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -o-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+.navbar ul li {
+  float: left;
+  margin: 10px;
+}
+.navbar ul li a{
+  color: white;
 }
 .ez-icon{
-	left: 15px;
-	width: 150px;
-	height: 150px;
-	background-repeat: no-repeat;
-	background-size: 100%;
-	background-position: center center;
+  left: 15px;
+  width: 150px;
+  float: left;
+  margin-right: 10px;
 }
 
 .headroom{
 
 }
 .headroom--pinned{
-	z-index: 10;
+  z-index: 10;
 }
 .headroom--unpinned{
-	z-index: 1;
+  z-index: 1;
 }
 .headroom--top{
-	position: fixed;
-	z-index: 9999;
-	right: 0;
-	left: 0;
-	top: 0;
+  position: fixed;
+  z-index: 9999;
+  right: 0;
+  left: 0;
+  top: 0;
 }
 .headroom--not-top{
-	position: fixed;
-	right: 0;
-	left: 0;
-	top: 0;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+}
+
+/** dianping detail */
+.bus-pic{
+  display: inline-block;
+  width: 100%;
+  height: 150px;
+  background-size: 100% 100%;
+  background-position: center center;
 }
