--- a/www/partials/directives/navigation-bar.html
+++ b/www/partials/directives/navigation-bar.html
@@ -1,14 +1,18 @@
-<ul class="breadcrumb" headroom>
-	<li class="active">
-		<a href="#/top">主页</a> <span class="divider"></span>
-	</li>
-	<li>
-		<a href="#/list">类目</a> <span class="divider"></span>
-	</li>
-	<li>
-		<a href="#/dianpingtest">商户</a>
-	</li>
-	<li>
-		<a href="#/m/top">MTop</a>
-	</li>
-</ul>
+<nav class="navbar">
+	<div class="container">
+		<ul>
+			<li class="active">
+				<a href="#/top">主页</a>
+			</li>
+			<li>
+				<a href="#/list">类目</a>
+			</li>
+			<li>
+				<a href="#/dianpingtest">商户</a>
+			</li>
+			<li>
+				<a href="#/m/top">MTop</a>
+			</li>
+		</ul>
+	</div>
+</nav>
