--- a/www/css/app.css
+++ b/www/css/app.css
@@ -119,4 +119,71 @@ title-bar .more{
   height: 150px;
   background-size: 100% 100%;
   background-position: center center;
+
+.game-panel{
+	/*height: 100%;*/
+	display: -webkit-box;
+	-webkit-box-align: center;
+	-webkit-box-pack: center;
+	-webkit-box-orient: vertical;
+}
+
+.control-panel{
+	width: 215px;
+	font-size: 20px;
+	color: white;
+}
+
+.high-score{
+	float: left;
+	height: 70px;
+	background-color: rgb(192,176,162);
+	margin: 5px;
+	padding: 8px 0px;
+	border-radius: 5px;
+	width: 65px;
+	text-align: center;
+}
+
+.score{
+	float: right;
+	height: 70px;
+	background-color: rgb(192,176,162);
+	margin: 5px;
+	padding: 8px 0px;
+	border-radius: 5px;
+	width: 65px;
+	text-align: center;
+}
+
+.card-area{
+	border: solid 1px;
+	width: 212px;
+	height: 212px;
+	background-color: rgb(192,176,162);
+	position: relative;
+}
+
+.card-empty-true{
+	background-color: rgb(218,206,197);
+}
+
+.card-empty-false{
+	background-color: rgb(240, 240, 235);
+}
+
+.card {
+	font-family: serif;
+	position: absolute;
+	width: 212px;
+	height: 212px;
+	height: 50px;
+	width: 50px;
+	margin: 2px;
+	border-radius: 3px;
+	/*background-color: rgb(218,206,197);*/
+	text-align: center;
+	line-height: 20px;
+	font-size: 20px;
+	padding: 15px 0px;
 }
