--- a/www/partials/directives/title-bar.html
+++ b/www/partials/directives/title-bar.html
@@ -1,3 +1,3 @@
-<span class="back">首页</span>
-<span class="text-title">标题</span>
-<span class="more">提交</span>
+<span class="back" hm-tap="leftAction($event)">{{leftText}}</span>
+<span class="text-title">{{title}}</span>
+<span class="more" hm-tap="rightAction($event)">{{rightText}}</span>
