--- a/www/partials/grapes/home.html
+++ b/www/partials/grapes/home.html
@@ -1,4 +1,5 @@
 <div ng-show="!!currentUser">
+  <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
   <a href="#/grapes_user_console">{{currentUser}}</a>
   <button class="btn btn-default" hm-tap="logout()" type="button">Log out</button>
 </div>
