--- a/www/partials/grapes/login.html
+++ b/www/partials/grapes/login.html
@@ -1,13 +1,22 @@
 <div class="container login-panel">
-  <div ng-model="currentUser"></div>
-  <div class="form-group">
-    <label for="exampleInputEmail1">User Name</label>
-    <input type="text" ng-model="username" class="form-control" placeholder="Enter User Name">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" ng-model="userpass" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <button class="btn btn-default" hm-tap="doLogin()" type="button">Login</button>
-  <button class="btn btn-default" hm-tap="doRegister()" type="button">Register</button>
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="col-sm-2 control-label">User Name</label>
+      <div class="col-sm-10">
+        <input type="text" ng-model="username" class="form-control" placeholder="Enter User Name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" ng-model="userpass" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button class="btn btn-default" hm-tap="doLogin()" type="button">Login</button>
+        <button class="btn btn-default" hm-tap="doRegister()" type="button">Register</button>
+      </div>
+    </div>
+  </form>
 </div>
